# robot-gitee-repo-watcher

./: BUILD.bazel  Dockerfile  WORKSPACE  build.sh  config.go  expect.go  go.mod  go.sum  handle_branch.go  handle_member.go  handle_obs_meta_project.go  handle_repo.go  local.go  main.go  robot.go  watch.go  watch_test.go
.github/workflows/: ci.yml
community/: BUILD.bazel  repos.go
models/: BUILD.bazel  repo.go
test/: config.yaml  gitee_token  project
