load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@github_opensourceways_community_robot_lib//:image.bzl", "build_plugin_image", "push_image", "image_tags")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/opensourceways/robot-gitee-repo-watcher
gazelle(name = "gazelle")

build_plugin_image(
    name = "image",
    plugin = "robot-gitee-repo-watcher",
)

push_image(
    name = "push_image",
    images = image_tags(
        target = ":image",
    ),
)

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "expect.go",
        "handle_branch.go",
        "handle_member.go",
        "handle_obs_meta_project.go",
        "handle_repo.go",
        "local.go",
        "main.go",
        "robot.go",
        "watch.go",
    ],
    importpath = "github.com/opensourceways/robot-gitee-repo-watcher",
    visibility = ["//visibility:private"],
    deps = [
        "//community:go_default_library",
        "//models:go_default_library",
        "@com_gitee_openeuler_go_gitee//gitee:go_default_library",
        "@com_github_huaweicloud_golangsdk//:go_default_library",
        "@com_github_opensourceways_community_robot_lib//config:go_default_library",
        "@com_github_opensourceways_community_robot_lib//giteeclient:go_default_library",
        "@com_github_opensourceways_community_robot_lib//logrusutil:go_default_library",
        "@com_github_opensourceways_community_robot_lib//options:go_default_library",
        "@com_github_opensourceways_community_robot_lib//secret:go_default_library",
        "@com_github_panjf2000_ants_v2//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_apimachinery//pkg/util/sets:go_default_library",
        "@io_k8s_sigs_yaml//:go_default_library",
    ],
)

go_binary(
    name = "robot-gitee-repo-watcher",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
